Fix img icons with wrong width on layout sidebar
There was a rule overriding the icon's width for img icons. We need those to have a fixed width for the layout sidebar icons, so this is overriding that rule.

--- a/src/definitions/inloco/layout.less
+++ b/src/definitions/inloco/layout.less
@@ -74,6 +74,10 @@
     overflow: hidden;
   }
 
+  .item > img:not(.ui):only-child {
+    width: 24px;
+  }
+
   .item.header {
     cursor: pointer;
     height: 64px;
